--- a/css/style.css
+++ b/css/style.css
@@ -1,33 +1,65 @@
 * {
-  border: dotted;
+  /* border: dotted; */
+  font-family: sans-serif;
+  text-align: center;
 }
-header {
-
+header h2 {
+  size: 10px;
+  float: left;
+}
+body {
+  margin 0 auto;
 }
 main {
-  margin: 0 auto;
+  
 }
-footer {
-
-}
-img {
+footer p {
 
 }
 ul {
-
+  border-color: royalblue;
 }
 ol {
 
 }
 .column1 {
   float: left;
-  padding: 50px;
+  padding: 130px;
+  margin-left: 25px;
 }
 .column2 {
   float: left;
-  padding: 50px;
+  padding: 130px;
+  margin-left: 25px;
 }
 .column3 {
   float: left;
+  padding: 130px;
+  margin-left: 25px;
+}
+p {
+  padding: 25px;
+}
+h1 {
   padding: 50px;
+  text-shadow: gray 1px 1px;
+  font-size: 25px;
+  background-color: rgb(230, 230, 230);
+}
+nav li {
+  display: inline-block;
+  float: right;
+  position: top;
+  padding: 15px;
+}
+img {
+  width: 1435px;
+  height: 800px;
+  box-shadow: 5px 5px gray;
+}
+h2 {
+  padding: 10px;
+}
+div .colBox{
+  border: 5px solid gray;
 }
