--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 * {
-  /* border: dotted; */
   font-family: sans-serif;
   text-align: center;
 }
@@ -8,7 +7,7 @@ header h2 {
   float: left;
 }
 body {
-  margin 0 auto;
+  margin: 0 auto;
 }
 main {
   
